modified: file name and navigation links

--- a/biodata.html
+++ b/biodata.html
@@ -70,31 +70,31 @@
             <nav class="mt-8 px-6">
                 <ul class="space-y-2">
                     <li>
-                        <a href="_dasbor.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
+                        <a href="dasbor.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
                             <i class="fas fa-tachometer-alt text-xl w-6 text-center"></i>
                             <span>Dasbor</span>
                         </a>
                     </li>
                     <li>
-                        <a href="_akun_saya.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
+                        <a href="akun-saya.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
                             <i class="fas fa-user-cog text-xl w-6 text-center"></i>
                             <span>Akun Saya</span>
                         </a>
                     </li>
                     <li>
-                        <a href="_biodata.html" class="flex items-center space-x-4 px-4 py-3 bg-white/10 rounded-lg">
+                        <a href="biodata.html" class="flex items-center space-x-4 px-4 py-3 bg-white/10 rounded-lg">
                             <i class="fas fa-id-card text-xl w-6 text-center"></i>
                             <span class="font-medium">Biodata</span>
                         </a>
                     </li>
                     <li>
-                        <a href="_program_studi.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
+                        <a href="program-studi.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
                             <i class="fas fa-graduation-cap text-xl w-6 text-center"></i>
                             <span>Program Studi & Jurusan</span>
                         </a>
                     </li>
                     <li>
-                        <a href="_pekerjaan.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
+                        <a href="pekerjaan.html" class="flex items-center space-x-4 px-4 py-3 hover:bg-white/10 rounded-lg transition">
                             <i class="fas fa-briefcase text-xl w-6 text-center"></i>
                             <span>Riwayat Pekerjaan Setelah Lulus</span>
                         </a>
