--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="flex justify-center items-center">
                 <div class="bg-white/10 backdrop-blur-md border border-white/20 rounded-2xl shadow-2xl p-8 md:p-10 w-full max-w-md">
                     <h2 class="text-2xl md:text-3xl font-semibold text-center mb-8">Masuk</h2>
-                    <form class="space-y-6" action="_dasbor.html">
+                    <form class="space-y-6" action="dasbor.html">
                         <div>
                             <label for="username" class="block text-sm font-medium mb-2">Username / Email</label>
                             <input type="text" id="username" class="w-full px-4 py-3 bg-white/5 border border-white/30 rounded-lg focus:outline-none focus:border-indigo-300 focus:ring-2 focus:ring-indigo-300/50 transition" placeholder="Masukkan username atau email">
